--- a/dogs/css/style.css
+++ b/dogs/css/style.css
@@ -875,10 +875,12 @@ body {
   }
 }
 
-.prohibition__img {
-  display: block;
-  display-display: none;
+@media (max-width: 415px) {
+  .prohibition__img {
+    display: none;
+  }
 }
+
 
 @media screen and (min-width: 415px) {
   .prohibition .cross-wrap {
