--- a/dogs/sass/style.sass
+++ b/dogs/sass/style.sass
@@ -67,11 +67,11 @@ body
     padding-top: 40px
     background-color: #fff
     height: 849px
-    background-image: url(/img/head-page-bg.png)
+    background-image: url(img/head-page-bg.png)
     background-position-x: right
     background-repeat: no-repeat
     @media ( max-width:  415px)
-        background-image: url(/img/mobile-bg1.png)
+        background-image: url(img/mobile-bg1.png)
         background-position-y: bottom
         background-position-x: center
         background-repeat: no-repeat
@@ -223,10 +223,10 @@ body
 
 @for $i from 1 through 4
     .benefit-item-bg-#{$i}
-        background-image: url(/img/benefit-#{$i}-bg.png)
+        background-image: url(img/benefit-#{$i}-bg.png)
         background-repeat: no-repeat
         @media ( max-width: 415px )
-            background-image: url(/img/benefits-page-mob-bg.png)
+            background-image: url(img/benefits-page-mob-bg.png)
             background-position-y: bottom
             background-position-x: center
             background-repeat: no-repeat
@@ -343,7 +343,7 @@ body
 .vest
     background-color: #fff
     text-align: center
-    background-image: url(/img/bgg.png)
+    background-image: url(img/bgg.png)
     background-size: contain
     background-repeat: no-repeat
     background-position-y: bottom 
@@ -418,11 +418,11 @@ body
     
 .comfort
     background-color: #fff
-    background-image: url(/img/comfort-bg.png)
+    background-image: url(img/comfort-bg.png)
     background-repeat: no-repeat
     background-position-x: right
     @media screen and ( max-width: 415px )
-        background-image: url(/img/comfort-mobile-bg.png)
+        background-image: url(img/comfort-mobile-bg.png)
         background-position-x: 215px
         background-position-y: bottom
 
@@ -486,7 +486,7 @@ body
         z-index: 3
         background-color: transparent
         transition: .4s ease-out
-        background-image: url(/img/play-ico.png)
+        background-image: url(img/play-ico.png)
         background-repeat: no-repeat
         background-position-x: center
         background-position-y: center
