--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     padding: 0;
     font-size: 18px;
     font-family: 'Rubik', sans-serif;
+    box-sizing: border-box;
 }
 
 .header {
@@ -14,6 +15,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #000;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
+}
+
+.header__text{
+    cursor: pointer;
 }
 
 .main {
@@ -38,9 +45,16 @@ body {
     background-color: #fafafa;
     border: 1px solid #e6e6e6;
     position: relative;
+    overflow: hidden;
+    transition: all .3s ease-in;
+    -webkit-transition: all .3s ease-in;
+    -moz-transition: all .3s ease-in;
+    -ms-transition: all .3s ease-in;
+    -o-transition: all .3s ease-in;
 }
 
 .card__link {
+    overflow: hidden;
     height: 100%;
     width: 100%;
     display: block;
@@ -50,7 +64,58 @@ body {
 }
 
 .card__wrap, .card__img {
-    object-fit: contain;
+    object-fit: cover;
     height: 100%;
     width: 100%;
+}
+
+.card__text {
+    position: absolute;
+    color: #fff;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -100%);
+    -webkit-transform: translate(-50%, -100%);
+    -moz-transform: translate(-50%, -100%);
+    -ms-transform: translate(-50%, -100%);
+    -o-transform: translate(-50%, -100%);
+}
+
+.card:hover {
+    transition: all .3s ease-out;
+    box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.4);
+    transform: scale(1.15);
+    -webkit-transform: scale(1.15);
+    -moz-transform: scale(1.15);
+    -ms-transform: scale(1.15);
+    -o-transform: scale(1.15);
+    -webkit-transition: all .3s ease-out;
+    -moz-transition: all .3s ease-out;
+    -ms-transition: all .3s ease-out;
+    -o-transition: all .3s ease-out;
+}
+
+.hidden {
+    position: fixed;
+    z-index: 22;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    cursor: pointer;
+}
+.hidden__text{
+    text-shadow: 2px 2px 10px rgba(255, 255, 255, 0.3);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -100%);
+    -webkit-transform: translate(-50%, -100%);
+    -moz-transform: translate(-50%, -100%);
+    -ms-transform: translate(-50%, -100%);
+    -o-transform: translate(-50%, -100%);
+    
 }
