--- a/main_src/style.css
+++ b/main_src/style.css
@@ -14,7 +14,7 @@ body {
     background-color: transparent;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     color: #000;
     text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
 }
@@ -25,16 +25,20 @@ body {
 
 .main {
     max-width: 1170px;
-    margin: 100px auto;
+    margin: 70px auto;
 }
 
 .cards {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    min-height: 300px;
+    flex-wrap: wrap;
+    padding: 30px;
 }
 
 .card {
+    margin: 10px;
     height: 155px;
     width: 155px;
     border-radius: 5px;
@@ -80,6 +84,7 @@ body {
     -moz-transform: translate(-50%, -100%);
     -ms-transform: translate(-50%, -100%);
     -o-transform: translate(-50%, -100%);
+    
 }
 
 .card:hover {
@@ -96,7 +101,7 @@ body {
     -o-transition: all .3s ease-out;
 }
 
-.hidden {
+.modal {
     position: fixed;
     z-index: 22;
     top: 0px;
@@ -107,7 +112,7 @@ body {
     display: none;
     cursor: pointer;
 }
-.hidden__text{
+.modal__text {
     text-shadow: 2px 2px 10px rgba(255, 255, 255, 0.3);
     position: absolute;
     top: 50%;
