--- a/main_src/style.css
+++ b/main_src/style.css
@@ -1,7 +1,7 @@
 body {
     height: 100vh;
     width: 100%;
-    background-color: pink;
+    background-image: linear-gradient(to top right, rgb(76, 189, 136), rgb(89, 190, 148), rgb(103, 192, 160), rgb(116, 193, 172), rgb(130, 195, 184), rgb(143, 196, 196), rgb(139, 196, 187), rgb(135, 195, 179), rgb(131, 195, 170), rgb(127, 195, 161), rgb(123, 194, 153), rgb(119, 194, 144));
     margin: 0;
     padding: 0;
     font-size: 18px;
@@ -89,7 +89,7 @@ body {
 
 .card:hover {
     transition: all .3s ease-out;
-    box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.4);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4);
     transform: scale(1.15);
     -webkit-transform: scale(1.15);
     -moz-transform: scale(1.15);
