--- a/slider/src/style.css
+++ b/slider/src/style.css
@@ -12,11 +12,14 @@ body {
     padding: 0;
     font-size: 18px;
     font-family: 'Rubik', sans-serif;
-    padding: 200px 30px;
+    padding: 0px 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .content {
-    margin: 0px auto;
+    margin: 50px;
     height: 400px;
     max-width: 800px;
     background-color: transparent;
