--- a/slider/src/style.css
+++ b/slider/src/style.css
@@ -12,14 +12,11 @@ body {
     padding: 0;
     font-size: 18px;
     font-family: 'Rubik', sans-serif;
-    padding: 0px 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 100px 30px;
 }
 
 .content {
-    margin: 50px;
+    margin: 0px auto;
     height: 400px;
     max-width: 800px;
     background-color: transparent;
