--- a/Lottery/css/style.css
+++ b/Lottery/css/style.css
@@ -80,6 +80,7 @@
 
 .button {
   font-weight: bold;
+  padding: 10px 15px;
   color: #F1F1F1;
   background: linear-gradient(249.48deg, #5306E1 0%, #8627E3 100%);
   border-radius: 7px;
@@ -88,5 +89,27 @@
 
 .login {
   padding: 10px 15px;
+}
+
+.big-title {
+  font-size: 40px;
+  line-height: 45px;
+  font-weight: bold;
+}
+
+.slider {
+  margin-top: 120px;
+}
+
+.slider__title {
+  color: #fff;
+}
+
+.slider__text {
+  color: #fff;
+}
+
+.orange-text {
+  color: #FFA801;
 }
 /*# sourceMappingURL=style.css.map */
