--- a/Lottery/css/style.css
+++ b/Lottery/css/style.css
@@ -1,3 +1,15 @@
+.orange-text {
+  color: #FFA801;
+}
+
+.purple-text {
+  color: #5306E1;
+}
+
+.main-text {
+  color: #1D1D1D;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -10,11 +22,12 @@
 }
 
 .head-page {
-  background-image: url(/src/img/header-page_bg.png);
+  background-image: url(../src/img/header-page_bg.png);
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
   width: 100%;
+  padding-top: 10px;
 }
 
 .header {
@@ -91,18 +104,37 @@
   padding: 10px 15px;
 }
 
-.big-title {
+.section__head {
   font-size: 40px;
   line-height: 45px;
   font-weight: bold;
 }
 
 .slider {
-  margin-top: 120px;
+  margin-top: 40px;
+}
+
+.slide__control {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.slide__text {
+  margin-top: 80px;
 }
 
 .slider__title {
   color: #fff;
+}
+
+.entrude {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 100%;
 }
 
 .slider__text {
@@ -111,5 +143,285 @@
 
 .orange-text {
   color: #FFA801;
+}
+
+.play {
+  height: 65px;
+  width: 65px;
+  border-radius: 100%;
+  border: none;
+  background-color: #FFA801;
+  position: relative;
+}
+
+.play__vertical {
+  position: absolute;
+  width: 3px;
+  height: 30px;
+  display: block;
+  background-color: #f1f1f1;
+  -webkit-transform: translate(20px, -50%);
+          transform: translate(20px, -50%);
+}
+
+.play__triangle {
+  position: absolute;
+  width: 3px;
+  height: 30px;
+  display: block;
+  background-color: #f1f1f1;
+  -webkit-transform: translate(27px, -50%);
+          transform: translate(27px, -50%);
+}
+
+.play__triangle::before {
+  content: '';
+  position: absolute;
+  width: 3px;
+  height: 25px;
+  display: block;
+  background-color: #f1f1f1;
+  -webkit-transform: translate(0px, 5%) rotate(-54deg);
+          transform: translate(0px, 5%) rotate(-54deg);
+  -webkit-transform-origin: top;
+          transform-origin: top;
+}
+
+.play__triangle::after {
+  content: '';
+  position: absolute;
+  width: 3px;
+  height: 25px;
+  display: block;
+  background-color: #f1f1f1;
+  -webkit-transform: translate(0px, 16%) rotate(55deg);
+          transform: translate(0px, 16%) rotate(55deg);
+  -webkit-transform-origin: bottom;
+          transform-origin: bottom;
+}
+
+.slider-btn {
+  padding: 20px 60px;
+  border-radius: 0px 33.5px 33.5px 33.5px;
+}
+
+.how {
+  padding-top: 60px;
+}
+
+.how__list {
+  list-style-type: none;
+  position: relative;
+}
+
+.how__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.how__item:hover .how__text {
+  display: block;
+}
+
+.how__name {
+  margin-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 10px;
+  padding: 20px 0px;
+  width: 100%;
+  background-color: #f1f1f1;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+  position: relative;
+}
+
+.how__name:hover {
+  background-color: #5306E1;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+}
+
+.how__name:hover::before {
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+  background-color: #5306E1;
+  color: #f1f1f1;
+  font-weight: bold;
+}
+
+.how__name:hover .how__p {
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+  color: #f1f1f1;
+  font-weight: bold;
+}
+
+.how__name::before {
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+  content: '';
+  height: 66px;
+  width: 66px;
+  background-color: #f1f1f1;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  left: -76px;
+}
+
+.how__text {
+  position: absolute;
+  display: none;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: #f1f1f1;
+}
+
+.how__item:nth-child(1) .how__name::before {
+  content: '1';
+}
+
+.how__item:nth-child(1) .how__text {
+  top: 0px;
+}
+
+.how__item:nth-child(2) .how__name::before {
+  content: '2';
+}
+
+.how__item:nth-child(2) .how__text {
+  top: -82px;
+}
+
+.how__item:nth-child(3) .how__name::before {
+  content: '3';
+}
+
+.how__item:nth-child(3) .how__text {
+  top: -164px;
+}
+
+.how__item:nth-child(4) .how__name::before {
+  content: '4';
+}
+
+.how__item:nth-child(4) .how__text {
+  top: -246px;
+}
+
+.how__p {
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
+  margin: 0;
+  color: #5306E1;
+}
+
+.partners {
+  margin-top: 120px;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-bottom: 60px;
+}
+
+.partners__logos {
+  -webkit-transform: translateX(0px);
+          transform: translateX(0px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.partners__img-wrap {
+  margin-right: 67px;
+}
+
+.advantages {
+  background: #190936;
+  background: linear-gradient(29deg, #190936 0%, #2c0e66 50%, #1b0b3c 100%);
+  padding: 60px 0px;
+}
+
+.advantages__grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 220px 220px;
+      grid-template-columns: 220px 220px;
+  grid-column-gap: 135px;
+  grid-row-gap: 80px;
+  margin-top: 60px;
+}
+
+.advantages__item {
+  max-width: 220px;
+}
+
+.advantages__title {
+  text-align: right;
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 27px;
+  margin-bottom: 15px;
+}
+
+.advantages__text {
+  color: #fff;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.advantages__diag {
+  margin-left: 15px;
+}
+
+.portfolio {
+  padding: 60px 0px;
+}
+
+.portfolio p {
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.portfolio__list {
+  list-style-position: inside;
+}
+
+.portfolio__item {
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.portfolio .section__head {
+  margin-bottom: 35px;
 }
 /*# sourceMappingURL=style.css.map */
